<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="right"
              android:background="#FFEEDD"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title2"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#FFA042"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/denglu_back"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:background="@mipmap/back"/>

        <TextView
            android:id="@+id/dengl"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:gravity="center"
            android:text="登录界面"
            android:textColorLink="#ffffff"
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/editRel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFEEDD">

        <RelativeLayout
            android:id="@+id/accountRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/yh"/>

            <EditText
                android:id="@+id/accountEdittext"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="45dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/account01"
                android:textColorHint="#bebebe"
                android:textSize="15sp"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pwdRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountRel"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/suo"/>

            <EditText
                android:id="@+id/pwdEdittext"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="45dp"
                android:background="@null"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:textColorHint="#bebebe"
                android:textSize="15sp"/>
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:onClick="true"
        android:text="@string/exist"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sound_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dip"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/forget_pwd"
            android:textColor="#29981A"/>

        <TextView
            android:id="@+id/login_now"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="#29981A"/>

    </LinearLayout>

</LinearLayout>